# cargo-cite

./: CITATION.bib  Cargo.toml  DEPENDENCIES.bib  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/dummy_crate/: Cargo.toml  DEPENDENCIES.bib
